[gd_scene load_steps=10 format=2]

[ext_resource path="res://Editor/Editor.gd" type="Script" id=1]
[ext_resource path="res://Editor/Buttons/Draw_Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Editor/Buttons/Draw_Button.gd" type="Script" id=3]
[ext_resource path="res://Texture/Draw_Selected.png" type="Texture" id=4]
[ext_resource path="res://Editor/Buttons/Eraser_Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://Editor/Buttons/Eraser_Button.gd" type="Script" id=6]
[ext_resource path="res://Texture/Eraser.png" type="Texture" id=7]
[ext_resource path="res://TitleScreen/Buttons/Back_Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Editor/Buttons/Save_Button.tscn" type="PackedScene" id=9]

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )

[node name="GridTiles" type="Node" parent="." index="0"]

[node name="Button" type="Node" parent="." index="1"]

[node name="DrawButton" parent="Button" index="0" instance=ExtResource( 2 )]

margin_left = 1470.0
margin_top = 425.0
margin_right = 1530.0
margin_bottom = 485.0
script = ExtResource( 3 )

[node name="DrawImg" type="TextureRect" parent="Button/DrawButton" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -50.0
margin_bottom = -50.0
rect_scale = Vector2( 6, 6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="EraserButton" parent="Button" index="1" instance=ExtResource( 5 )]

margin_left = 1473.0
margin_top = 559.0
margin_right = 1533.0
margin_bottom = 619.0
script = ExtResource( 6 )

[node name="EraserImg" type="TextureRect" parent="Button/EraserButton" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -50.0
margin_bottom = -50.0
rect_scale = Vector2( 6, 6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="BackButton" parent="Button" index="2" instance=ExtResource( 8 )]

margin_left = 451.0
margin_top = 934.0
margin_right = 1411.0
margin_bottom = 994.0

[node name="SaveButton" parent="Button" index="3" instance=ExtResource( 9 )]

margin_left = 141.0
margin_top = 915.0
margin_right = 201.0
margin_bottom = 975.0

[node name="Blocks" type="Node" parent="." index="2"]

[connection signal="pressed" from="Button/DrawButton" to="." method="_on_DrawButton_pressed"]

[connection signal="pressed" from="Button/DrawButton" to="Button/DrawButton" method="_on_DrawButton_pressed"]

[connection signal="pressed" from="Button/DrawButton" to="Button/EraserButton" method="_on_DrawButton_pressed"]

[connection signal="pressed" from="Button/EraserButton" to="." method="_on_EraserButton_pressed"]

[connection signal="pressed" from="Button/EraserButton" to="Button/DrawButton" method="_on_EraserButton_pressed"]

[connection signal="pressed" from="Button/EraserButton" to="Button/EraserButton" method="_on_EraserButton_pressed"]

[connection signal="pressed" from="Button/SaveButton" to="." method="_on_SaveButton_pressed"]


